--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -35,6 +35,26 @@ body {
   background: #fff;
   box-shadow: 2px 8px 20px rgba(0, 0, 0, 0.08);
   border-radius: 14px;
+  .pass-icon{
+    position: relative;
+    svg{
+      position: absolute;
+      right: 14px;
+      top: 18px;
+      cursor: pointer;
+      &.color-switch{
+        fill: #d8d8d8;
+        path{
+          fill: #afafaf;
+        }
+        &.active{
+          path{
+            fill: #afafaf;
+          }
+        }
+      }
+    }
+  }
   img {
     margin-top: -140px;
   }
@@ -69,13 +89,13 @@ body {
         padding-left: 40px !important;
       }
       &.pass{
-        background: #fff url(../images/eye-grey.svg)no-repeat !important;
-        background-position: 95% 17px!important;
+        // background: #fff url(../images/eye-grey.svg)no-repeat !important;
+        // background-position: 95% 17px!important;
         padding-left: 40px !important;
         padding-right: 30px;
         &:focus{
-          background: #fff url(../images/eye-active.svg)no-repeat !important;
-          background-position: 95% 17px!important;
+          // background: #fff url(../images/eye-active.svg)no-repeat !important;
+          // background-position: 95% 17px!important;
           padding-left: 40px !important;
           padding-right: 30px;
         }
@@ -807,6 +827,8 @@ body {
   width: 100%;
 }
 .cstm-select {
+
+
   &.mini {
     .css-yk16xz-control {
       box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07) !important;
@@ -1963,6 +1985,26 @@ body {
   and (min-device-width: 320px)
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) and (device-aspect-ratio: 40/71) {
+    .hor-inline .time-block{
+      width: 100%;
+      margin-top: 13px;
+    }
+    .cstm-select.mini .css-yk16xz-control{
+      width: 130px;
+    }
+    .hor-inline .time-block .dash{
+      left: 145px;
+    }
+    .collapse-area .collapse-container .collapse-content .col {
+      padding: 12px 10px;
+    }
+    .mb-navigator{
+      display: block;
+    }
+  }
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 568px){
     .hor-inline .time-block{
       width: 100%;
       margin-top: 13px;
