--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1580,6 +1580,10 @@ body {
   }
 }
 
+.flex-top-name{
+  display: flex;
+}
+
 @media only screen
   and (min-device-width: 320px)
   and (max-device-width: 896px) {
