--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1584,6 +1584,7 @@ body {
   display: flex;
 }
 
+
 @media only screen
   and (min-device-width: 320px)
   and (max-device-width: 896px) {
@@ -2037,4 +2038,17 @@ body {
 .divP {
   margin-top: 0;
   margin-bottom: 1rem;
+}
+
+
+@media only screen
+  and (min-device-width: 320px)
+  and (max-device-width: 1024px) {
+    .mb-sidepanel{
+      left: auto !important;
+      right: 100% !important;
+    }
+    .wrapper{
+      padding-left: 0px;
+    }
 }
