--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -270,7 +270,7 @@ body {
     &::after {
       // display: none;
       border: 0px !important;
-      background: url(../images/down-arrow.svg) no-repeat;
+      //background: url(../images/down-arrow.svg) no-repeat;
       width: 18px;
       height: 10px;
       position: absolute;
