--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1197,6 +1197,8 @@ body {
     position: absolute;
     left: 10px;
     top: 14px;
+    cursor: pointer;
+    z-index: 99;
 }
 
 .menu-close {
@@ -1205,7 +1207,7 @@ body {
     position: absolute;
     right: 20px;
     top: 48px;
-    display: none;
+    /*display: none;*/
 }
 
 .hidden-lg {
@@ -1837,8 +1839,7 @@ body {
     .sidebar-wrapper {
         z-index: 999;
         background: #f5f5f5;
-        -webkit-box-shadow: 0px 0px 10px #bdbdbd;
-        box-shadow: 0px 0px 10px #bdbdbd;
+        border-right: 1px solid #dddddd;
     }
 
     .sidebar-wrapper .menu-list {
@@ -1965,8 +1966,7 @@ body {
     .sidebar-wrapper {
         z-index: 999;
         background: #f5f5f5;
-        -webkit-box-shadow: 0px 0px 10px #bdbdbd;
-        box-shadow: 0px 0px 10px #bdbdbd;
+        border-right: 1px solid #dddddd;
     }
 
     .sidebar-wrapper .menu-list {
@@ -2093,8 +2093,7 @@ body {
     .sidebar-wrapper {
         z-index: 999;
         background: #f5f5f5;
-        -webkit-box-shadow: 0px 0px 10px #bdbdbd;
-        box-shadow: 0px 0px 10px #bdbdbd;
+        border-right: 1px solid #dddddd;
     }
 
     .sidebar-wrapper .menu-list {
@@ -2194,8 +2193,7 @@ body {
     .sidebar-wrapper {
         z-index: 999;
         background: #f5f5f5;
-        -webkit-box-shadow: 0px 0px 10px #bdbdbd;
-        box-shadow: 0px 0px 10px #bdbdbd;
+        border-right: 1px solid #dddddd;
     }
 
     .sidebar-wrapper .menu-list {
@@ -2318,13 +2316,18 @@ body {
   }
 }*/
 
-/*@media (max-width: 768px) {
-  body {
-    color: red;
-  }
-}*/
+.trigger{
+    left: 0px !important;
+    right: auto !important;
+}
 
-@media (min-device-width: 320px) and (max-device-width: 1024px) {
+.menu-close.desktop{
+    top: 64px;
+    right: 10px;
+    display: none;
+}
+
+@media (min-width: 320px) and (max-width: 1024px) {
     .mb-sidepanel {
         left: auto !important;
         right: 100% !important;
@@ -2333,9 +2336,11 @@ body {
     .wrapper {
         padding-left: 0px;
     }
-
-    body {
-        color: red;
+    .navbar-cstm{
+        padding-left: 0px;
+    }
+    .menu-close.desktop {
+        display: block;
     }
 }
 
