--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -136,6 +136,7 @@ body {
   font-size: 12px;
   opacity: 0.4;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .container-login .ls-panel .link-holder a.default {
