--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1042,11 +1042,12 @@ body {
 .mod-rest-container .rotator-container {
   height: 80vh;
   position: relative;
+  margin-bottom: 20px;
 }
 
 .mod-rest-container .rotator-container .rotator-scroll {
   position: absolute;
-  height: 100%;
+  height: calc(100% - 55px);
   width: 100%;
   overflow: auto;
   padding: 5px;
@@ -1790,6 +1791,13 @@ body {
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 896px) {
+  .dishEditorMobile {
+    position: absolute;
+    z-index: 9;
+    top: 0;
+    left: 0;
+    background: whitesmoke;
+  }
   .collapse-area .collapse-container .collapse-header span {
     font-size: 12px;
   }
