--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1900,10 +1900,16 @@ body {
   }
 }
 
+.hideMobile{
+  display: none;
+}
+
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
   .collapse-area .collapse-container .collapse-header span {
     font-size: 12px;
   }
+
+  
   .wrapper {
     padding-left: 0px;
   }
@@ -2000,6 +2006,10 @@ body {
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 896px) and (-webkit-min-device-pixel-ratio: 2) {
+  .hideMobile{
+    display: inline-block;
+    width: 100%;
+  }
   .collapse-area .collapse-container .collapse-header span {
     font-size: 12px;
   }
