--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1848,6 +1848,23 @@ body {
   display: flex;
 }
 
+.url_input{
+  position: relative;
+  background: #fff;
+  width: 100%;
+  height: 45px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
+  border-radius: 30px;
+  padding: 10px 14px;
+  margin-bottom: 20px;
+  .btn-copy{
+    position: absolute;
+    right: 8px;
+    top: 6px;
+    border: 0px;
+    background: #fff;
+  }
+}
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 896px) {
 
