--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1847,14 +1847,14 @@ body {
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
           box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
   border-radius: 30px;
-  padding: 10px 14px;
+  padding: 0px;
   margin-bottom: 20px;
 }
 
 .url_input .btn-copy {
   position: absolute;
-  right: 8px;
-  top: 6px;
+  right: 10px;
+  top: 7px;
   border: 0px;
   background: #fff;
 }
