--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1855,12 +1855,12 @@ body {
   height: 45px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.07);
   border-radius: 30px;
-  padding: 10px 14px;
+  padding: 0px;
   margin-bottom: 20px;
   .btn-copy{
     position: absolute;
-    right: 8px;
-    top: 6px;
+    right: 10px;
+    top: 7px;
     border: 0px;
     background: #fff;
   }
