--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -513,11 +513,12 @@ body {
 .order-detail .action-container .btn-express span {
   display: block;
   font-size: 12px;
+  
 }
 
-.order-detail .action-container .btn-confirm {
+.order-detail .action-container .btn-hold.active {
   background: #b30dff;
-  color: #fff;
+  
   border-radius: 12px;
   display: inline-block;
   width: 80px;
@@ -525,7 +526,7 @@ body {
   margin: 10px 15px;
 }
 
-.order-detail .action-container .btn-confirm .inner {
+.order-detail .action-container .btn-hold.active .inner {
   background: #8a15bf;
   width: 60px;
   height: 60px;
@@ -534,9 +535,15 @@ body {
   border-radius: 8px;
 }
 
-.order-detail .action-container .btn-confirm span {
+.order-detail .action-container .btn-hold.active span {
   display: block;
   font-size: 12px;
+  color: #fff !important;
+}
+
+.order-detail .action-container .btn-hold.active .inner svg,
+.order-detail .action-container .btn-hold.active span {
+  opacity: 1;
 }
 
 .order-detail .action-container .btn-hold {
@@ -1654,7 +1661,7 @@ body {
 
 .add-menu-new .add-details .dummy {
   width: 100%;
-  height: 10px;
+  /* height: 10px; */
   border-radius: 5px;
   margin-bottom: 5px;
   background: #fff;
@@ -1666,7 +1673,7 @@ body {
 .add-menu-new .add-details .price {
   font-size: 18px;
   color: #000;
-  margin-top: 25px;
+  /* margin-top: 25px; */
   white-space: nowrap;
   overflow: auto;
 }
